# f1tenth_AutonomousBlocking

./: .gitignore  setup_env.sh  terminal_commands_run.txt  test.py  train.py
Opponent_Detection_Train/: video.py
Opponent_Detection_Train/perception/: setup.py
Opponent_Detection_Train/perception/config/: opponent_detector_params.yaml
Opponent_Detection_Train/perception/launch/: opponent_detector.launch.py
Opponent_Detection_Train/perception/perception/: opponent_detector.py
Opponent_Detection_Train/sensors/: setup.py
Opponent_Detection_Train/sensors/launch/: camera.launch.py
Opponent_Detection_Train/sensors/sensors/: camera_publisher.py
Raceline_Generation/: generate_3_racelines_V4.py
lab_ws25/: README.md  setup_workspace.sh
lab_ws25/launch/: README.md  full_system.launch.py
lab_ws25/scripts/: build_and_test.sh  camera_publisher.py  fake_odom_publisher.py  frame_extractor_from_video.py  print_image_size.py  raceline_visualizer.py  reacord_camera_and_detection.py  update_racelines.py  view_detections.py
lab_ws25/src/opponent_detection/: README.md  package.xml  setup.cfg  setup.py
lab_ws25/src/pure_pursuit/: CMakeLists.txt
lab_ws25/src/rrt/config/: config.yaml
lab_ws25/src/sensors/: README.md
lab_ws25/src/state_machine/: package.xml  setup.py
lab_ws25/src/waypoint_visualizer/: CMakeLists.txt  package.xml
perception/: README.md  package.xml
perception/config/: opponent_detector_params.yaml
perception/launch/: opponent_detector.launch.py
scripts/: zed_realtime_detection.py
sensors/: package.xml
sensors/config/: camera_params.yaml
(+55 files in other folders)
