<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>1.0.0</version>
  <description>F1Tenth opponent car detection using YOLO</description>
  
  <maintainer email="your_email@example.com">F1Tenth Team</maintainer>
  <license>MIT</license>
  
  <author email="your_email@example.com">F1Tenth Team</author>
  
  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
